2008-01-10  Johannes Schmid <jhs@gnome.org>

	Patch from: James Ligett:

	* plugins/profiler/gprof-call-graph-view.c:
	(gprof_call_graph_view_create_columns):
	* plugins/profiler/gprof-flat-profile-view.c:
	(gprof_flat_profile_view_create_columns):
	
	Fixed translation issues (#496833)

2008-01-10 Johannes Schmid <jhs@gnome.org>

	Patch from Bolesław Kulbabiński <bolekk@gmail.com> (GHOP):

	* plugins/gtodo/gtodo.c: (category_manager_add_item):
	Fix #460390 – Changing categories while edinting something

2008-01-09  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin-manager.c:
	(anjuta_plugin_manager_activate_plugins): Commented dead code and
	fixed a leak.

	* libanjuta/anjuta-status.c: (anjuta_status_dispose): Fixes a memory
	corruption reported in bug #507491. Potentially fixes too.

2008-01-09  Johannes Schmid <jhs@gnome.org>

	Patch from Bolesław Kulbabiński <<bolekk@gmail.com> (GHOP):

	* plugins/gtodo/mcategory.c: (category_manager_add_item):
	Fix bug #505205 completely
	
	* AUTHORS: Added Bolesław

2008-01-08  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c:
	(on_editor_command_cut_activate),
	(on_editor_command_paste_activate),
	(on_editor_command_copy_activate),
	(on_editor_command_clear_activate):
	
	Fixed editor popup menu (Cut, Copy, Paste)

2008-01-08  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (autodetect_language):
	Fixed a crash when creating a new file

2008-01-08  Johannes Schmid <jhs@gnome.org>

	Patch by <bolekk@gmail.com> (GHOP Student)

	* plugins/gtodo/mcategory.c: (category_manager_add_item):
	Fix bug #505205

2008-01-08  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin-handle.c: (anjuta_plugin_handle_new):
	* libanjuta/anjuta-plugin-manager.c:
	(anjuta_plugin_manager_select),
	(anjuta_plugin_manager_activate_plugins):
	* libanjuta/anjuta-profile.c: (anjuta_profile_to_xml):
	* plugins/file-loader/plugin.c: (sort_wizards), (open_with_dialog),